# EZFIO

./: .gitignore  LICENSE  Makefile  README  README.md  README.rst  build.ninja  configure  configure.ac  configure.py  make.config.example  make.config.in  version
Bash/: ezfio.sh
config/: ezfio.config
git-tools/: commit-msg  install_tools.sh  post-commit
src/: Makefile  create_bash.py  create_ocaml.py  create_python.py  ezfio-head.py  ezfio-tail.py  ezfio.ml  f_types.py  groups.py  groups_templates.py  libezfio_error.irp.f  libezfio_file.irp.f  libezfio_groups.irp.f  libezfio_util.irp.f  read_config.py  run.irp.f  test.py
